# hedgefund1

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  SETUP.md  docker-compose.yml  mosaic-production-spec.md  mosaic-video-prototype-brief.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: base.py  connector_agent.py  delta_agent.py  extractor_agent.py  graph_agent.py  orchestrator.py
backend/app/api/: analytics.py  companies.py  filings.py  graph.py  jobs.py  router.py  theses.py
backend/app/data/: edgar.py  market_data.py  preprocessor.py  transcripts.py  xbrl.py
backend/app/db/: models.py  session.py
backend/app/db/repositories/: analytics_repo.py  company_repo.py  filing_repo.py  (+4 more)
backend/app/graph/: builder.py  exporter.py  queries.py
backend/app/prompts/: connector.j2  delta.j2  extractor.j2  graph_builder.j2
backend/app/schemas/: company.py  filing.py  financials.py  graph.py  thesis.py
backend/app/tasks/: celery_app.py  ingest_tasks.py  thesis_tasks.py
backend/app/utils/: chunker.py  embeddings.py  grounding.py  logger.py  rate_limiter.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_connector.py  test_delta.py  test_extractor.py
backend/tests/test_api/: test_analytics.py  test_companies.py  test_financials.py  test_theses.py
backend/tests/test_data/: test_analytics_repo.py  test_financial_fact_repo.py  test_financial_facts_model.py  test_temporal_graph.py  test_xbrl.py
backend/tests/test_utils/: test_grounding.py  test_logger.py
(+43 files in other folders)
